k8s/base/deployment-pipelines.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pipelines
  namespace: ${NAMESPACE}
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: pipelines
  template:
    metadata:
      labels:
        app: pipelines
    spec:
      enableServiceLinks: false
      containers:
        - name: pipelines
          image: ${PIPELINES_IMAGE}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9099
              name: http
          volumeMounts:
            - name: pipelines-workdir
              mountPath: /app/pipelines
      volumes:
        - name: pipelines-config
          configMap:
            name: pipelines-config
        - name: pipelines-workdir
          emptyDir: {}
