k8s/base/service-pipelines.yaml
apiVersion: v1
kind: Service
metadata:
  name: pipelines
  namespace: ${NAMESPACE}
spec:
  selector:
    app: pipelines
  ports:
    - name: http
      port: 9099
      targetPort: 9099
