k8s/base/service-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: rotating-proxy
  namespace: ${NAMESPACE}
spec:
  type: ClusterIP
  ports:
    - port: 3128
      targetPort: 3128
      protocol: TCP
      name: squid
    - port: 8404
      targetPort: 8404
      protocol: TCP
      name: stats
---
apiVersion: v1
kind: Endpoints
metadata:
  name: rotating-proxy
  namespace: ${NAMESPACE}
subsets:
  - addresses:
      - ip: ${PROXY_IP}
    ports:
      - port: 3128
        name: squid
      - port: 8404
        name: stats
