k8s/base/service-searxng.yaml
apiVersion: v1
kind: Service
metadata:
  name: searxng
  namespace: ${NAMESPACE}
spec:
  selector:
    app: searxng
  ports:
    - name: http
      port: 80
      targetPort: 8080
